// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VThemeProvider.ts should render div when using with-background prop 1`] = `
<div class="v-theme-provider v-theme--light">
  <button type="button"
          class="v-btn v-btn--contained v-btn--elevated v-theme--light v-btn--density-default v-btn--size-default"
  >
    <span class="v-btn__overlay">
    </span>
    foo
  </button>
</div>
`;

exports[`VThemeProvider.ts should use default theme from options 1`] = `
<button type="button"
        class="v-btn v-btn--contained v-btn--elevated v-theme--light v-btn--density-default v-btn--size-default"
>
  <span class="v-btn__overlay">
  </span>
  foo
</button>
`;

exports[`VThemeProvider.ts should use theme defined in prop 1`] = `
<button type="button"
        class="v-btn v-btn--contained v-btn--elevated v-theme--dark v-btn--density-default v-btn--size-default"
>
  <span class="v-btn__overlay">
  </span>
  foo
</button>
`;
